[project]
name = "e3-diffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "esm>=3.2.0",
    "imageio>=2.37.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pip>=25.1.1",
    "rdkit>=2025.3.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.11",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["./"]
include = ["src", "scripts", "configs"]
